--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,8 @@
 script:
   - false
+
+notifications:
+  webhooks:
+    - http://travis-ci-lingrbot.raa0121.info/ruby/sandbox
+    - http://travis-ci-lingrbot.raa0121.info/python/sandbox
+    - http://travis-ci-lingrbot.raa0121.info/node/sandbox
